syntax = "proto3";
package bench;


message InternalTransaction {
  bytes Receiver = 1;
  uint64 Amount = 2;
}

message EventBody {
  uint64 Index = 1;
  bytes Creator = 2;
  repeated bytes Parents = 3;
  repeated bytes ExternalTransactions = 4;
  repeated InternalTransaction InternalTransactions = 5;
}
